--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,15 @@ header {
   border-width: 0.1rem;
 }
 
+.buttons > .quiz-progress {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 10px;
+}
+
 .buttons > button:hover {
   background-color: rgba(255, 255, 255, 0.5);
   cursor: pointer;
